tdf#122428 show new comments in Manage Changes

dialog window added by "Edit Comment..." of local
menu of the listed changes.

Change-Id: Ie6501d06f8ad233c44318cf8928892667534f6a2
Reviewed-on: https://gerrit.libreoffice.org/67162
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>